--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/es5-shim/2.2.0/es5-shim.js"></script>
-    <title>Vadakkekunnath Sree RajaRajeswari Devi Temple</title>
+    <title>Vadakkekunnathu Sree RajaRajeswari Devi Temple</title>
     <link rel="shortcut icon" href="images/title.png" type="image/png">
 
 </head>
-<body layout="row">
+<body>
 <div class="container-fluid text-center " id="banner">
     <div class="col-md-2 hidden-sm hidden-xs"></div>
     <div class="col-md-1 hidden-sm hidden-xs text-center wow fadeInDown"><figure><img class="brand_logo" src="images/lampleft.png" alt="logo"></figure></div>
@@ -25,7 +25,7 @@
 </div>
 <br><br>
 <div class="container text-center">
-    <h5 class="maketextgold bold-700" style="font-family: gramond;">VADAKKEKUNNATHU SREE RAJA RAJESWARI TEMPLE</h5>
+    <h5 class="maketextgold bold-700" style="font-family: gramond;">VADAKKEKUNNATHU SREE RAJA RAJESWARI DEVI TEMPLE</h5>
 </div>
 <nav id="nav_bar" class="container-fluid navbar navbar-default rrnavbar text-center">
 
@@ -45,11 +45,11 @@
     <div id="myNavbar" class="navbar-collapse collapse">
         <ul class="nav navbar-collapse">
             <li class="item1" ui-sref="home"><span >HOME</span></li>
-            <li class="item2" ui-sref="events"><span >EVENTS</span></li>
-            <li class="item3" ui-sref="poojas"><span >POOJAS</span></li>
-            <li class="item4" ui-sref="gallery"><span>GALLERY</span></li>
-            <li class="item5" ui-sref="contact"><span>CONTACT</span></li>
-            <li class="item6" ui-sref="yagam"><span>YAGAM</span></li>
+            <li class="item2" ui-sref="poojas"><span >POOJAS</span></li>
+            <li class="item3" ui-sref="gallery"><span>GALLERY</span></li>
+            <li class="item4" ui-sref="info"><span >INFO</span></li>
+            <li class="item5" ui-sref="yagam"><span>YAGAM</span></li>
+            <li class="item6" ui-sref="contact"><span>CONTACT</span></li>
             <hr id="floatingline"/>
 
         </ul>
@@ -135,7 +135,7 @@
                 <a href="https://www.facebook.com/Vadakkekunnathu-Sreerajarajeswaridevi-Temple-Kollam-911505548945129/?fref=ts" type="button" class="btn btn-sm btn-primary waves-effect waves-light"><i class="fa fa-facebook"> </i> <span>Facebook</span></a>
                 <!--<a type="button" class="btn  btn-sm  btn-info waves-effect waves-light"><i class="fa fa-twitter"> </i> <span>Twitter</span></a>-->
                 <!--<a type="button" class="btn btn-sm  btn-danger waves-effect waves-light"><i class="fa fa-google-plus"> </i> <span>Google +</span></a>-->
-                <a type="button" href="mailto:test@gaml.com" class="btn btn-sm  btn-default waves-effect waves-light"><i class="fa fa-envelope-o"> </i> <span>Email</span></a>
+                <a type="button" href="mailto:office@sreerajarajeswaridevi.org" class="btn btn-sm  btn-default waves-effect waves-light"><i class="fa fa-envelope-o"> </i> <span>Email</span></a>
             </div>
             <div class="col-md-2"></div>
         </div>
@@ -151,6 +151,18 @@
 <script type="text/javascript" src="js/vendor.min.js" defer></script>
 <script type="text/javascript" src="js/mdb.js" defer></script>
 <script type="text/javascript" src="js/app.min.js" defer></script>
+
+<!--google analytics script snippet-->
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-74765539-1', 'auto');
+    ga('send', 'pageview');
+
+</script>
 
 
 </body>
