--- a/src/termsandconditions.html
+++ b/src/termsandconditions.html
@@ -1,9 +1,10 @@
 <style>
     p{
         font-size: medium;
+        line-height: 1!important;
     }
 </style>
-<div class="reportdiv">
+<div>
 
     <h5>Welcome to Vadakkekkunathu Sree Raja Rajeswari Devi Temple Website!</h5>
     <p>These terms and conditions outline the rules and regulations for the use of  Vadakkekkunathu Sree Raja Rajeswari Devi Temple's Website. <br />
