--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <h5 class="white-text">Navigate</h5>
                 <ul>
                     <li><a class="grey-text text-lighten-3" ui-sref="yagam">Yagam</a></li>
-                    <li><a class="grey-text text-lighten-3" ui-sref="contacts">People</a></li>
+                    <li><a class="grey-text text-lighten-3" ui-sref="contact">People</a></li>
 
                 </ul>
             </div>
