modifications -site updates

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
             <div class="col-md-3">
                 <h5 class="white-text">Contact</h5>
                 <hr>
-                <p class="small">Vadakkekunanthu Sree Rajarajeswari Devi Temple</p>
-                <p class="small">Vrindavan Nagar, Kadappakada</p>
-                <p class="small">Kollam 691008, Kerala</p>
-                <a class="small" ui-sref="contact" style="color:white;font-size: small">more</a>
+                <p class="small white-text">Vadakkekunanthu Sree Rajarajeswari Devi Temple</p>
+                <p class="small white-text">Vrindavan Nagar, Kadappakada</p>
+                <p class="small white-text">Kollam 691008, Kerala</p>
+                <a class="small white-text" ui-sref="contact" style="color:white;font-size: small">more</a>
                 <p></p>
             </div>
             <div class="col-md-2">
