--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta charset="utf-8">
-    <meta name="Description" CONTENT="rajarajeswari, vadakkekunnathu, rajarajeshwari, temple, Category: Temple, kerala, kollam, sree, devi, raja rajeshwari">
+    <meta name="Description" CONTENT="rajarajeswari, vadakkekunnathu, rajarajeshwari temple kollam, temple, Category: Temple, kerala, kollam, sree, devi, raja rajeshwari">
     <meta name="google-site-verification" content="WzGDG3RHNCxUktV0eH-BGwdVXjoK4nte8Ute5HWcmDE" />
     <meta name="Keywords" content="RajaRajeswari, rajeshwari, temple, kollam, kerala, vadakkekunnathu sree raja rajeshwari devi temple, devi">
     <meta name="robots" content="index,follow">
