--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html ng-app="rrApp" ng-strict-di>
 <head>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta charset="utf-8">
-    <meta name="Description" CONTENT="rajarajeswari, vadakkekunnathu, rajarajeshwari temple kollam, temple, Category: Temple, kerala, kollam, sree, devi, raja rajeshwari">
-    <meta name="google-site-verification" content="WzGDG3RHNCxUktV0eH-BGwdVXjoK4nte8Ute5HWcmDE" />
-    <meta name="Keywords" content="RajaRajeswari, rajeshwari, temple, kollam, kerala, vadakkekunnathu sree raja rajeshwari devi temple, devi">
-    <meta name="robots" content="index,follow">
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/vendor.min.css">
