--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <li class="item2" ui-sref="poojas"><span >POOJAS</span></li>
             <li class="item3" ui-sref="gallery"><span>GALLERY</span></li>
             <li class="item4" ui-sref="info"><span >INFO</span></li>
-            <li class="item5" ui-sref="yagam"><span>YAGAM</span></li>
-            <li class="item6" ui-sref="contact"><span>CONTACT</span></li>
+            <!-- <li class="item5" ui-sref="yagam"><span>YAGAM</span></li> -->
+            <li class="item5" ui-sref="contact"><span>CONTACT</span></li>
             <hr id="floatingline"/>
 
         </ul>
@@ -126,7 +126,7 @@
             <div class="col-md-2">
                 <h5 class="white-text">Navigate</h5>
                 <ul>
-                    <li><a class="grey-text text-lighten-3" ui-sref="yagam">Yagam</a></li>
+                    <!-- <li><a class="grey-text text-lighten-3" ui-sref="yagam">Yagam</a></li> -->
                     <li><a class="grey-text text-lighten-3" ui-sref="contact">People</a></li>
 
                 </ul>
@@ -146,6 +146,27 @@
         </div>
     </div>
 </footer>
+
+
+                <div class="modal fade" id="ulsavamModal" role="dialog">
+                        <div class="modal-dialog modal-xl">
+
+                            <!-- Modal content-->
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h5 class="modal-title maketextgold bold-700" style="text-align: center;font-weight: bold;">ശ്രീ മഹാ തിരുനാൾ മഹോത്സവം</h5>
+                                </div>
+                                <div class="modal-body">
+                                    <div ng-include="'src/ulsavam.html'"></div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
 
 
 <script type="text/javascript" src="js/vendor.min.js" defer></script>
