--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h5 class="modal-title maketextgold bold-700" style="text-align: center;font-weight: bold;">ശ്രീ മഹാ തിരുനാൾ മഹോത്സവം</h5>
+                                    <h5 class="modal-title maketextgold bold-700" style="text-align: center;font-weight: bold;word-wrap: break-word;">ശ്രീ മഹാ തിരുനാൾ മഹോത്സവം</h5>
                                 </div>
                                 <div class="modal-body">
                                     <div ng-include="'src/ulsavam.html'"></div>
