--- a/src/ulsavam.html
+++ b/src/ulsavam.html
@@ -11,7 +11,7 @@
     <img data-original="http://i.imgur.com/yNoluAL.jpg" src="http://i.imgur.com/yNoluAL.jpg" alt="Ulsavam">
 
     <br><br>
-    <h5 class="modal-title" style="text-align: center;color: goldenrod;font-weight: bold;">കൊല്ലം കടപ്പാക്കട ശ്രീരാജരാജേശ്വരിദേവീക്ഷേത്രത്തിൽ സൂര്യമണ്ഡലാകൃതിയിലുള്ള നവഗ്രഹ പ്രതിഷ്ഠാ കർമ്മം</h5>
+    <h5 class="modal-title" style="text-align: center;color: goldenrod;font-weight: bold;word-wrap: break-word;">കൊല്ലം കടപ്പാക്കട ശ്രീരാജരാജേശ്വരിദേവീക്ഷേത്രത്തിൽ സൂര്യമണ്ഡലാകൃതിയിലുള്ള നവഗ്രഹ പ്രതിഷ്ഠാ കർമ്മം</h5>
     <br><br>
     <img data-original="http://i.imgur.com/gY7HfvD.jpg" src="http://i.imgur.com/gY7HfvD.jpg" alt="Ulsavam">
     <img data-original="http://i.imgur.com/IVCYftc.jpg" src="http://i.imgur.com/IVCYftc.jpg" alt="Ulsavam">
