added ulsavam 2018 data.
updated ulsavam data,.
for updating images, upload images to images/ulsavam

--- a/src/ulsavam.html
+++ b/src/ulsavam.html
@@ -5,14 +5,11 @@
     }
 </style>
 <div class="col-md-12 col-lg-12 col-sm-12 ulsavam docs-pictures clearfix">
-    <img data-original="http://i.imgur.com/fX52xYv.jpg" src="http://i.imgur.com/fX52xYv.jpg" alt="Ulsavam">
-    <!--<img data-original="http://i.imgur.com/8f7eCvm.jpg" src="http://i.imgur.com/8f7eCvm.jpg" alt="Ulsavam">-->
-    <img data-original="http://i.imgur.com/TJoxBJW.jpg" src="http://i.imgur.com/TJoxBJW.jpg" alt="Ulsavam">
-    <img data-original="http://i.imgur.com/yNoluAL.jpg" src="http://i.imgur.com/yNoluAL.jpg" alt="Ulsavam">
+    <img data-original="images/ulsavam/1.jpg" src="images/ulsavam/1.jpg" alt="Ulsavam">
+    <img data-original="images/ulsavam/2.jpg" src="images/ulsavam/2.jpg" alt="Ulsavam">
+    <img data-original="images/ulsavam/3.jpg" src="images/ulsavam/3.jpg" alt="Ulsavam">
+    <img data-original="images/ulsavam/4.jpg" src="images/ulsavam/4.jpg" alt="Ulsavam">
 
-    <br><br>
-    <h5 class="modal-title" style="text-align: center;color: goldenrod;font-weight: bold;word-wrap: break-word;">കൊല്ലം കടപ്പാക്കട ശ്രീരാജരാജേശ്വരിദേവീക്ഷേത്രത്തിൽ സൂര്യമണ്ഡലാകൃതിയിലുള്ള നവഗ്രഹ പ്രതിഷ്ഠാ കർമ്മം</h5>
-    <br><br>
-    <img data-original="http://i.imgur.com/gY7HfvD.jpg" src="http://i.imgur.com/gY7HfvD.jpg" alt="Ulsavam">
-    <img data-original="http://i.imgur.com/IVCYftc.jpg" src="http://i.imgur.com/IVCYftc.jpg" alt="Ulsavam">
+    <!-- <img data-original="http://i.imgur.com/gY7HfvD.jpg" src="http://i.imgur.com/gY7HfvD.jpg" alt="Ulsavam">
+    <img data-original="http://i.imgur.com/IVCYftc.jpg" src="http://i.imgur.com/IVCYftc.jpg" alt="Ulsavam"> -->
 </div>
