--- a/index.html
+++ b/index.html
@@ -142,7 +142,11 @@
     </div>
     <div class="footer-copyright text-center rgba-black-light">
         <div class="container-fluid">
-            © 2016 Copyright: <a>Vadakkekunnath Sree Raja Rajeshwari Devi Trust </a>
+            © 2016 Copyright: <a>Vadakkekunnath Sree Raja Rajeshwari Devi Trust</a>
+        </div>
+        <hr>
+        <div class="container-fluid">
+            Developed by: Kiran Bose (kiranbose@gmail.com)</a>
         </div>
     </div>
 </footer>
