--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
         <div class="container-fluid">
             © 2016 Copyright: <a>Vadakkekunnath Sree Raja Rajeshwari Devi Trust</a>
         </div>
-        <hr>
-        <div class="container-fluid">
-            Developed by: Kiran Bose (kiranbose@gmail.com)</a>
+        <div class="container-fluid credits">
+            <p>Developed by: Kiran Bose (kiranbose@gmail.com) </p>
+            <p>Charanbabu Karnam (charanbabukarnam@gmail.com)</p>
         </div>
     </div>
 </footer>
