--- a/src/bugreport.html
+++ b/src/bugreport.html
@@ -4,6 +4,7 @@
     <p>If you have any trouble using the website or if you find any problems that disrupted your browsing experience</p>
     <br>
     <p>Please write to us at.</p>
+    <a style="color:dodgerblue" href="mailto:kiranbose@gmail.com">kiranbose@gmail.com</a>
     <a style="color:dodgerblue" href="mailto:office@sreerajarajeswaridevi.org">office@sreerajarajeswaridevi.org</a>
 
     <p>Feel free to write to us anytime.</p>
