android bridge test

--- a/android_app/index.html
+++ b/android_app/index.html
@@ -11,6 +11,7 @@
 <script>
 function displayResult() {
   document.getElementById("myHeader").innerHTML = "Have a nice day!";
+  Android.showToast('Hello Android!');
 }
 </script>
 
