--- a/android_app/index.html
+++ b/android_app/index.html
@@ -1,19 +1,14 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>VKSR Audit</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
 <body>
-
-<h2>Using The id Attribute in JavaScript</h2>
-<p>JavaScript can access an element with a specified id by using the getElementById() method:</p>
-
-<h1 id="myHeader">Hello World!</h1>
-<button onclick="displayResult()">Change text</button>
-
-<script>
-function displayResult() {
-  document.getElementById("myHeader").innerHTML = "Have a nice day!";
-  Android.showToast('Hello Android!');
-}
-</script>
-
-</body>
+  <app-root></app-root>
+<script src="runtime.js" defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills.js" defer></script><script src="styles.js" defer></script><script src="scripts.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 </html>
