--- a/android_app/index.html
+++ b/android_app/index.html
@@ -10,5 +10,12 @@
 </head>
 <body>
   <app-root></app-root>
-<script src="runtime.js" defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills.js" defer></script><script src="styles.js" defer></script><script src="scripts.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
+<script type="text/javascript" src="runtime.js" defer></script>
+<script type="text/javascript" src="polyfills-es5.js" nomodule defer></script>
+<script type="text/javascript" src="polyfills.js" defer></script>
+<script type="text/javascript" src="styles.js" defer></script>
+<script type="text/javascript" src="scripts.js" defer></script>
+<script type="text/javascript" src="vendor.js" defer></script>
+<script type="text/javascript" src="main.js" defer></script>
+</body>
 </html>
