--- a/android_app/index.html
+++ b/android_app/index.html
@@ -5,7 +5,7 @@
   <title>VKSR Audit</title>
   <base href="/android_app/">
 
-  <meta name="viewport" content="height=1080, width=1920, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=.5">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
