--- a/android_app/index.html
+++ b/android_app/index.html
@@ -6,7 +6,7 @@
   <base href="/android_app/">
 
   <meta name="viewport" content="width=device-width, initial-scale=0.8">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://www.sreerajarajeswaridevi.org/images/title.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <!-- <script src="assets/datepicker/polyfill.js"></script> -->
