--- a/android_app/index.html
+++ b/android_app/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X9JEDNQ6H7"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5QJ3VY4324"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'G-X9JEDNQ6H7');
-  </script>
+  gtag('config', 'G-5QJ3VY4324');
+</script>
   <meta charset="utf-8">
   <title>VKSR Audit</title>
   <base href="/android_app/">
