--- a/android_app/index.html
+++ b/android_app/index.html
@@ -10,6 +10,13 @@
 
   gtag('config', 'G-5QJ3VY4324');
 </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-M7VTSVB');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <title>VKSR Audit</title>
   <base href="/android_app/">
