--- a/prod_app/index.html
+++ b/prod_app/index.html
@@ -19,7 +19,7 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <title>VKSR Audit</title>
-  <base href="/android_app/">
+  <base href="/prod_app/">
 
   <meta name="viewport" content="width=device-width, initial-scale=0.8">
   <link rel="icon" type="image/x-icon" href="https://www.sreerajarajeswaridevi.org/images/title.png">
