--- a/prod_app/index.html
+++ b/prod_app/index.html
@@ -19,7 +19,8 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <title>VKSR Audit</title>
-  <base href="">
+  <base href="/prod_app/">
+
   <meta name="viewport" content="width=device-width, initial-scale=0.8">
   <link rel="icon" type="image/x-icon" href="https://www.sreerajarajeswaridevi.org/images/title.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -28,7 +29,7 @@
   <script src="assets/datepicker/moment.js"></script>
   <script src="assets/datepicker/rome.standalone.js"></script>
   <script src="assets/datepicker/material-datetime-picker.js" charset="utf-8"></script>
-<link rel="stylesheet" href="styles.8e8bb54e44b720c3bba8.css"></head>
+</head>
 
 <body>
   <!-- Google Tag Manager (noscript) -->
@@ -36,6 +37,6 @@
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <app-root></app-root>
-<script src="runtime.670f0ab9b381836b6d4a.js" defer></script><script src="polyfills-es5.3b4df5fa87666d0ae99f.js" nomodule defer></script><script src="polyfills.a1c446000b2cf277f90f.js" defer></script><script src="scripts.3ec1f18a8f983692acfe.js" defer></script><script src="main.746bd99436244b1baf95.js" defer></script></body>
+<script src="runtime.js" defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills.js" defer></script><script src="styles.js" defer></script><script src="scripts.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 
 </html>
