--- a/android_app/index.html
+++ b/android_app/index.html
@@ -20,6 +20,7 @@
   <meta charset="utf-8">
   <title>VKSR Audit</title>
   <base href="/android_app/">
+
   <meta name="viewport" content="width=device-width, initial-scale=0.8">
   <link rel="icon" type="image/x-icon" href="https://www.sreerajarajeswaridevi.org/images/title.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -28,6 +29,8 @@
   <script src="assets/datepicker/moment.js"></script>
   <script src="assets/datepicker/rome.standalone.js"></script>
   <script src="assets/datepicker/material-datetime-picker.js" charset="utf-8"></script>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 
 <body>
