--- a/prod_app/index.html
+++ b/prod_app/index.html
@@ -20,6 +20,7 @@
   <meta charset="utf-8">
   <title>VKSR Audit</title>
   <base href="/prod_app/">
+
   <meta name="viewport" content="width=device-width, initial-scale=0.8">
   <link rel="icon" type="image/x-icon" href="https://www.sreerajarajeswaridevi.org/images/title.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -28,6 +29,8 @@
   <script src="assets/datepicker/moment.js"></script>
   <script src="assets/datepicker/rome.standalone.js"></script>
   <script src="assets/datepicker/material-datetime-picker.js" charset="utf-8"></script>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 <link rel="stylesheet" href="styles.8e8bb54e44b720c3bba8.css"></head>
 
 <body>
@@ -36,6 +39,6 @@
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <app-root></app-root>
-<script src="runtime.7f5c5343f7068e48ea06.js" defer></script><script src="polyfills-es5.3b4df5fa87666d0ae99f.js" nomodule defer></script><script src="polyfills.a1c446000b2cf277f90f.js" defer></script><script src="scripts.3ec1f18a8f983692acfe.js" defer></script><script src="main.81711aca2934fb02cb60.js" defer></script></body>
+<script src="runtime.0a709c234251cc2730b9.js" defer></script><script src="polyfills-es5.fde58a02a5d484872287.js" nomodule defer></script><script src="polyfills.435646a308ef17c8a258.js" defer></script><script src="scripts.b741082feb481cd86b51.js" defer></script><script src="main.d3ea8425fe868563144e.js" defer></script></body>
 
 </html>
