--- a/prod_app/index.html
+++ b/prod_app/index.html
@@ -28,6 +28,8 @@
   <script src="assets/datepicker/moment.js"></script>
   <script src="assets/datepicker/rome.standalone.js"></script>
   <script src="assets/datepicker/material-datetime-picker.js" charset="utf-8"></script>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 <link rel="stylesheet" href="styles.8e8bb54e44b720c3bba8.css"></head>
 
 <body>
@@ -36,6 +38,6 @@
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <app-root></app-root>
-<script src="runtime.7f5c5343f7068e48ea06.js" defer></script><script src="polyfills-es5.3b4df5fa87666d0ae99f.js" nomodule defer></script><script src="polyfills.a1c446000b2cf277f90f.js" defer></script><script src="scripts.3ec1f18a8f983692acfe.js" defer></script><script src="main.81711aca2934fb02cb60.js" defer></script></body>
+<script src="runtime.1d4bafb778dc54024cb3.js" defer></script><script src="polyfills-es5.3b4df5fa87666d0ae99f.js" nomodule defer></script><script src="polyfills.a1c446000b2cf277f90f.js" defer></script><script src="scripts.3ec1f18a8f983692acfe.js" defer></script><script src="main.67baa494dd9be96074f2.js" defer></script></body>
 
 </html>
