--- a/android_app/index.html
+++ b/android_app/index.html
@@ -29,7 +29,7 @@
   <script src="assets/datepicker/rome.standalone.js"></script>
   <script src="assets/datepicker/material-datetime-picker.js" charset="utf-8"></script>
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+  <meta name="theme-color" content="#303f9f">
 </head>
 
 <body>
