added updaate pwa button

--- a/prod_app/index.html
+++ b/prod_app/index.html
@@ -29,6 +29,8 @@
   <script src="assets/datepicker/rome.standalone.js"></script>
   <script src="assets/datepicker/material-datetime-picker.js" charset="utf-8"></script>
   <link rel="manifest" href="manifest.prod.webmanifest">
+  <link rel="apple-touch-icon" href="https://www.sreerajarajeswaridevi.org/android_app/assets/icons/icon-144x144.png">
+
   <meta name="theme-color" content="#303f9f">
 <link rel="stylesheet" href="styles.8e8bb54e44b720c3bba8.css"></head>
 
@@ -38,6 +40,6 @@
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <app-root></app-root>
-<script src="runtime.1d4bafb778dc54024cb3.js" defer></script><script src="polyfills-es5.3b4df5fa87666d0ae99f.js" nomodule defer></script><script src="polyfills.a1c446000b2cf277f90f.js" defer></script><script src="scripts.3ec1f18a8f983692acfe.js" defer></script><script src="main.2ee4833252fdd1c804b4.js" defer></script></body>
+<script src="runtime.1d4bafb778dc54024cb3.js" defer></script><script src="polyfills-es5.3b4df5fa87666d0ae99f.js" nomodule defer></script><script src="polyfills.a1c446000b2cf277f90f.js" defer></script><script src="scripts.3ec1f18a8f983692acfe.js" defer></script><script src="main.0c7e0f1d1332d765a416.js" defer></script></body>
 
 </html>
