--- a/android_app/index.html
+++ b/android_app/index.html
@@ -29,6 +29,8 @@
   <script src="assets/datepicker/rome.standalone.js"></script>
   <script src="assets/datepicker/material-datetime-picker.js" charset="utf-8"></script>
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="apple-touch-icon" href="https://www.sreerajarajeswaridevi.org/android_app/assets/icons/icon-144x144.png">
+
   <meta name="theme-color" content="#303f9f">
 </head>
 
