changed update button

--- a/android_app/index.html
+++ b/android_app/index.html
@@ -31,7 +31,7 @@
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="apple-touch-icon" href="https://www.sreerajarajeswaridevi.org/android_app/assets/icons/icon-144x144.png">
 
-  <meta name="theme-color" content="#303f9f">
+  <meta name="theme-color" content="#3e83cd">
 </head>
 
 <body>
